--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
     "gradio>=5.28.0",
     "openai>=1.76.2",
+    "openai-agents>=0.0.14",
     "pypdf>=5.4.0",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
 ]
